Added related work

--- a/index.html
+++ b/index.html
@@ -287,6 +287,28 @@ Protein Conformations"</strong></a>, in ICLR 2020 (Spotlight).
 </ul>
 </p>
 
+<h2>Additional Related Work</h2>
+
+Here are some additional work in this direction:
+
+<ul id='relatedwork'>
+<li font-size: 15px>
+ Geoffrey E. Hinton <a href="https://www.cs.toronto.edu/~hinton/absps/tr00-004.pdf"><strong>"Training Products of Experts by Minimizing Contrastive Divergence"</strong></a>
+</li>
+<li font-size: 15px>
+ Yann LeCun, Sumit Chopra, Raia Hadsell, Marc'Aurelio Ranzato, and Fu Jie Huang <a href="http://yann.lecun.com/exdb/publis/pdf/lecun-06.pdf"><strong>"A Tutorial on Energy-Based Learning"</strong></a>
+</li>
+<li font-size: 15px>
+ Ramakrishna Vedantam, Ian Fischer, Jonathan Huang, Kevin Murphy <a href="https://arxiv.org/abs/1705.10762"><strong>"Generative Models of Visually Grounded Imagination"</strong></a>
+</li>
+<li font-size: 15px>
+ Irina Higgins, Nicolas Sonnerat, Loic Matthey, Arka Pal, Christopher P Burgess, Matko Bosnjak, Murray Shanahan, Matthew Botvinick, Demis Hassabis, Alexander Lerchner <a href="https://arxiv.org/abs/1707.03389"><strong>"SCAN: Learning Hierarchical Compositional Visual Concepts"</strong></a>
+</li>
+<li font-size: 15px>
+ Jianwen Xie, Yang Lu, Song-Chun Zhu, Ying Nian Wu <a href="https://arxiv.org/pdf/1602.03264.pdf"><strong>"A Theory of Generative ConvNet"</strong></a>
+</li>
+</ul>
+
 
 
 
