--- a/index.html
+++ b/index.html
@@ -268,28 +268,10 @@ We can further test the ability of our model to implicitly compositionally infer
 <center><a> <img src="fig/multiobject_compositionality.jpg" style="float:none;width:400px"> </a></center>
 </p>
 
-<p>
-<h2>Our Additional Work</h2>
-
-If interested, here is our additional works on utilizing energy models:
-
-<ul id='relatedwork'>
-<li font-size: 15px>
- Yilun Du, Igor Mordatch <a href="https://papers.nips.cc/paper/8619-implicit-generation-and-modeling-with-energy-based-models"><strong>"Implicit Generation and Modeling with Energy Based Models"</strong></a>, in NeurIPS 2019 (Spotlight).
-</li>
-<li font-size: 15px>
- Yilun Du, Toru Lin, Igor Mordatch <a href="https://arxiv.org/abs/1909.06878"><strong>"Modeling Based Planning with Energy Based Models"</strong></a>, in CORL 2019.
-</li>
-<li font-size: 15px>
- Yilun Du, Joshua Meier, Jerry Ma, Rob Fergus, Alexander Rives <a href="https://openreview.net/pdf?id=S1e_9xrFvS"><strong>"Energy-Based Models For Atomic-Resolution
-Protein Conformations"</strong></a>, in ICLR 2020 (Spotlight).
-</li>
-</ul>
-</p>
 
 <h2>Additional Related Work</h2>
 
-Here are some additional work in this direction:
+Here are some related works to the content in this paper:
 
 <ul id='relatedwork'>
 <li font-size: 15px>
@@ -305,10 +287,31 @@ Here are some additional work in this direction:
  Irina Higgins, Nicolas Sonnerat, Loic Matthey, Arka Pal, Christopher P Burgess, Matko Bosnjak, Murray Shanahan, Matthew Botvinick, Demis Hassabis, Alexander Lerchner <a href="https://arxiv.org/abs/1707.03389"><strong>"SCAN: Learning Hierarchical Compositional Visual Concepts"</strong></a>
 </li>
 <li font-size: 15px>
+ Irina Higgins, Nicolas Sonnerat, Loic Matthey, Arka Pal, Christopher P Burgess, Matko Bosnjak, Murray Shanahan, Matthew Botvinick, Demis Hassabis, Alexander Lerchner <a href="https://arxiv.org/abs/1707.03389"><strong>"Compositional GAN: Learning Image-Conditional Binary Composition"</strong></a>
+</li>
+<li font-size: 15px>
  Jianwen Xie, Yang Lu, Song-Chun Zhu, Ying Nian Wu <a href="https://arxiv.org/pdf/1602.03264.pdf"><strong>"A Theory of Generative ConvNet"</strong></a>
 </li>
 </ul>
 
+See our paper for a more comprehensive list of references.
+
+<h2>Our Additional Work on Energy-Based Models</h2>
+
+If interested, here is our additional works on utilizing energy models:
+
+<ul id='relatedwork'>
+<li font-size: 15px>
+ Yilun Du, Igor Mordatch <a href="https://papers.nips.cc/paper/8619-implicit-generation-and-modeling-with-energy-based-models"><strong>"Implicit Generation and Modeling with Energy Based Models"</strong></a>, in NeurIPS 2019 (Spotlight).
+</li>
+<li font-size: 15px>
+ Yilun Du, Toru Lin, Igor Mordatch <a href="https://arxiv.org/abs/1909.06878"><strong>"Modeling Based Planning with Energy Based Models"</strong></a>, in CORL 2019.
+</li>
+<li font-size: 15px>
+ Yilun Du, Joshua Meier, Jerry Ma, Rob Fergus, Alexander Rives <a href="https://openreview.net/pdf?id=S1e_9xrFvS"><strong>"Energy-Based Models For Atomic-Resolution
+Protein Conformations"</strong></a>, in ICLR 2020 (Spotlight).
+</li>
+</ul>
 
 
 
