--- a/index.html
+++ b/index.html
@@ -89,9 +89,8 @@ BODY {
 <p><a href="fig/paper.pdf">arxiv</a>,  2019. </p>
 
 
-
 <h2>Citation</h2>
-<p>"Compositional Visual Generation and Inference with Energy Based Models", arxiv.
+<p>Yilun Du, Shuang Li, Igor Mordatch. "Compositional Visual Generation and Inference with Energy Based Models", arxiv.
 <a href="fig/citation.txt">Bibtex</a>
 
 </p>
@@ -180,13 +179,13 @@ We explore the ability of our models to compose across different attributes. We 
 </p>
 
 <p>
-<center><img src="fig/com_cube.jpg" style="float:none;width:600px"> </center>
+<center><img src="fig/com_cube.jpg" style="float:none;width:500px"> </center>
 </p>
 
 We can similarily condition different attributes of humans faces
 
 <p>
-<center><img src="fig/com_human.jpg" style="float:none;width:500px"> </center>
+<center><img src="fig/com_human.jpg" style="float:none;width:400px"> </center>
 </p>
 
 <p>
@@ -198,7 +197,7 @@ An advantage of defining composition through the manipulation of probability dis
 </p>
 
 <p>
-<center><a><img src="fig/symbolic.jpg" style="float:none;width:500px"> </a></center>
+<center><a><img src="fig/symbolic.jpg" style="float:none;width:400px"> </a></center>
 </p>
 
 <p>
@@ -208,7 +207,7 @@ In addition, we can also learn EBMs on the object attricutes. We train a single 
 
 </p>
 <p>
-<center><a> <img src="fig/multiobject.jpg" style="float:none;width:400px"> </a></center>
+<center><a> <img src="fig/multiobject.jpg" style="float:none;width:250px"> </a></center>
 </p>
 
 <p>
@@ -239,7 +238,7 @@ We train a new EBM model for attributes of position, shape, and color, and find 
 
 </p>
 <p>
-<center><a> <img src="fig/continuous.jpg" style="float:none;width:400px"> </a></center>
+<center><a> <img src="fig/continuous.jpg" style="float:none;width:300px"> </a></center>
 </p>
 
 
@@ -259,7 +258,7 @@ If we know that a set of different \( x_i \) that all have the same underlying c
 
 We test the above compositional reasoning on inferring the position of a cube given different view of the same image. By doing inference on the latent of EBM in the above manner, we find that we can obtain better predictions of positions.
 
-<center><a> <img src="fig/multiobj.jpg" style="float:none;width:500px"> </a></center>
+<center><a> <img src="fig/multiobj.jpg" style="float:none;width:400px"> </a></center>
 
 <h3>Compositional Inference In One Image</h3>
 
@@ -285,9 +284,6 @@ Here are some related works to the content in this paper:
 </li>
 <li font-size: 15px>
  Irina Higgins, Nicolas Sonnerat, Loic Matthey, Arka Pal, Christopher P Burgess, Matko Bosnjak, Murray Shanahan, Matthew Botvinick, Demis Hassabis, Alexander Lerchner <a href="https://arxiv.org/abs/1707.03389"><strong>"SCAN: Learning Hierarchical Compositional Visual Concepts"</strong></a>
-</li>
-<li font-size: 15px>
- Irina Higgins, Nicolas Sonnerat, Loic Matthey, Arka Pal, Christopher P Burgess, Matko Bosnjak, Murray Shanahan, Matthew Botvinick, Demis Hassabis, Alexander Lerchner <a href="https://arxiv.org/abs/1707.03389"><strong>"Compositional GAN: Learning Image-Conditional Binary Composition"</strong></a>
 </li>
 </ul>
 
