--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ BODY {
 </p>
 
 
-<h2>Code: <a href=''>Tensorflow</a> </h2>
+<h2>Code: <a href='https://github.com/yilundu/ebm_compositionality'>Tensorflow</a> </h2>
 
 <br><br>
 
@@ -213,6 +213,7 @@ Suprisingly, we find that when conditioned cubes are too close to each other, a 
 
 By having the ability to compose independently models, EBMs allow us to continually learn to generate new images with both new and old visual concepts. To test this we consider:
 
+<br>
 <br>
 <ul id='continual_dataset'>
 <li font-size: 6px>
