--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ BODY {
   <sup>1</sup> MIT CSAIL&nbsp;&nbsp;&nbsp;
   <sup>2</sup> Google Brain
 </h2></center>
-<center><h2><strong><a href="">Paper</a> | <a href="">Tensorflow code</a></strong> </h2></center>
+<center><h2><strong><a href="http://arxiv.org/abs/2004.06030">Paper</a> | <a href="https://github.com/yilundu/ebm_compositionality">Tensorflow code</a></strong> </h2></center>
 <br>
 
 
