--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ BODY {
   <sup>1</sup> MIT CSAIL&nbsp;&nbsp;&nbsp;
   <sup>2</sup> Google Brain
 </h2></center>
-<center><h2><strong><a href="http://arxiv.org/abs/2004.06030">Paper</a> | <a href="https://github.com/yilundu/ebm_compositionality">Tensorflow code</a></strong> </h2></center>
+<center><h2><strong><a href="https://arxiv.org/pdf/2004.06030.pdf">Paper</a> | <a href="https://github.com/yilundu/ebm_compositionality">Tensorflow code</a></strong> </h2></center>
 <br>
 
 
@@ -86,7 +86,7 @@ BODY {
 
 
 <h2>Paper</h2>
-<p><a href="fig/paper.pdf">arxiv</a>,  2019. </p>
+<p><a href="https://arxiv.org/pdf/2004.06030.pdf">arxiv</a>,  2019. </p>
 
 
 <h2>Citation</h2>
