--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ BODY {
 <center><h1>Compositional Visual Generation and Inference with Energy Based Models</h1></center>
 <center><h2><a href="https://yilundu.github.io/">Yilun Du<sup>1</sup></a>&nbsp;&nbsp;&nbsp;
   <a href="http://www.mit.edu/~lishuang/">Shuang Li<sup>1</sup></a>&nbsp;&nbsp;&nbsp;
-  <a href="https://openai.com/blog/authors/igor/">Igor Mordatch<sup>2</sup></a></h2></center>
+  <a href="https://scholar.google.com/citations?user=Vzr1RukAAAAJ&hl=en">Igor Mordatch<sup>2</sup></a></h2></center>
 <center><h2>
   <sup>1</sup> MIT CSAIL&nbsp;&nbsp;&nbsp;
   <sup>2</sup> Google Brain
