--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ BODY {
 
 
 <h2>Citation</h2>
-<p>Yilun Du, Shuang Li, Igor Mordatch. "Compositional Visual Generation and Inference with Energy Based Models", arxiv.
+<p>Yilun Du, Shuang Li, Igor Mordatch. "Compositional Visual Generation and Inference with Energy Based Models", NeurIPS 2020 (spotlight).
 <a href="fig/citation.txt">Bibtex</a>
 
 </p>
