--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ BODY {
 
 
 <h2>Paper</h2>
-<p><a href="https://arxiv.org/pdf/2004.06030.pdf">arxiv</a>,  2020. </p>
+<p><a href="https://arxiv.org/pdf/2004.06030.pdf">Neurips Spotlight</a>,  2020. </p>
 
 
 <h2>Citation</h2>
