--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <p class="authors">
         <a href="https://yilundu.github.io">Yilun Du</a>,
         <a href="https://people.csail.mit.edu/lishuang/"> Shuang Li</a>,
-        <a href="">Igor Mordatch</a>
+        <a href="https://scholar.google.com/citations?user=Vzr1RukAAAAJ&hl=en">Igor Mordatch</a>
     </p>
     <div class="btn-group" role="group" aria-label="Top menu">
         <a class="btn btn-primary" href="https://arxiv.org/abs/2004.06030">Paper</a>
@@ -67,7 +67,7 @@
             Energy based models <a href="https://openai.com/blog/energy-based-models/">(EBMs) </a> represent 
             a distribution over data by defining an energy \(E_\theta(x) \) so that the likelihood of the data 
             is proportional to \( \propto e^{-E_\theta(x)}\). Sampling in EBMs is done through MCMC sampling,
-            using <a href="https://www.ics.uci.edu/~welling/publications/papers/stoclangevin_v6.pdf">Langevin dynamics </a>.
+            using <a href="https://www.ics.uci.edu/~welling/publications/papers/stoclangevin_v6.pdf">Langevin dynamics</a>.
 
             Our key insight in our work is that underlying probability distributions can be <b>composed</b> together to
             represent different composition of concepts. Sampling under the modified probability distributions may then be
@@ -272,7 +272,7 @@
 
                 <div class="col">
                     <div class='paper-title'>
-                        <a href="https://arxiv.org/abs/2012.01316">Model Based Planning with Energy Based Models</a>
+                        <a href="https://arxiv.org/abs/1909.06878">Model Based Planning with Energy Based Models</a>
                     </div>
                     <div>
                         We present a framework towards utilizing EBMs to learn, in an online fashion, trajectory level plans for 
@@ -308,7 +308,7 @@
                 <hr>
                 <div>
                     <div class="list-group">
-                        <a href=""
+                        <a href="https://arxiv.org/abs/2004.06030"
                            class="list-group-item">
                             <img src="img/paper_thumbnail.png"
                                  style="width:100%; margin-right:-20px; margin-top:-10px;">
