--- a/index.html
+++ b/index.html
@@ -25,9 +25,13 @@
     <h3>NeurIPS 2020 (Spotlight)</h3>
     <hr>
     <p class="authors">
-        <a href="https://yilundu.github.io">Yilun Du</a>,
-        <a href="https://people.csail.mit.edu/lishuang/"> Shuang Li</a>,
-        <a href="https://scholar.google.com/citations?user=Vzr1RukAAAAJ&hl=en">Igor Mordatch</a>
+        <a href="https://yilundu.github.io">Yilun Du<sup>1</sup></a>,
+        <a href="https://people.csail.mit.edu/lishuang/"> Shuang Li<sup>1</sup></a>,
+        <a href="https://scholar.google.com/citations?user=Vzr1RukAAAAJ&hl=en">Igor Mordatch<sup>2</sup></a>
+    </p>
+    <p class="institution">
+      <sup>1</sup> MIT CSAIL&nbsp;&nbsp;&nbsp;
+      <sup>2</sup> Google Brain
     </p>
     <div class="btn-group" role="group" aria-label="Top menu">
         <a class="btn btn-primary" href="https://arxiv.org/abs/2004.06030">Paper</a>
