--- a/index.html
+++ b/index.html
@@ -261,8 +261,8 @@
 			    <a href="https://energy-based-model.github.io/Energy-Based-Models-for-Continual-Learning/">Energy-Based Models for Continual Learning</a>
 			</div>
 			<div>
-			    We motivate Energy-Based Models (EBMs) as a promising model class for continual learning problems. Instead of tackling continual learning via the use of external memory, growing models, or regularization, EBMs change the underlying training objective to causes less interference with previously learned information. Our proposed version of EBMs for continual learning is simple, efficient, and outperforms baseline methods by a large margin on several benchmarks. 
-			    We further show that EBMs are adaptable to a more general continual learning setting where the data distribution changes without the notion of explicitly delineated tasks. 
+			    We show how EBMs help provide an orthogonal approach towards tackling continual learning problems by changing the underlying training objective to causes less interference with previously learned information. Our proposed EBM  formulation is  simple, efficient, and outperforms baseline methods by a large margin on several benchmarks. 
+			    We further show that EBMs are adaptable to a harder continual learning setting where the data distribution changes without explicitly delineated task boundaries. 
 			</div>
 		    </div>
 		</div>
