--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
                 <div class="bibtexsection">
                     @inproceedings{du2020compositional,
                       title={Compositional Visual Generation with Energy Based Models},
-                      author={Du, Yilun and Li, Shuang and and Mordatch, Igor},
+                      author={Du, Yilun and Li, Shuang and Mordatch, Igor},
                       journal={Advances in Neural Information Processing Systems},
                       year={2020}
                     }
