--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
                     @inproceedings{du2020compositional,
                       title={Compositional Visual Generation with Energy Based Models},
                       author={Du, Yilun and Li, Shuang and Mordatch, Igor},
-                      journal={Advances in Neural Information Processing Systems},
+                      booktitle={Advances in Neural Information Processing Systems},
                       year={2020}
                     }
                 </div>
